samples/_failures_safe/1761661859_e8f699_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6687e366.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_6687e366.c:128:40: error: expected ‘;’ at end of input
  128 |             for (int j = 0; j < m->cols
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_6687e366.c:128:13: error: expected declaration or statement at end of input
  128 |             for (int j = 0; j < m->cols
      |             ^~~
./samples/SAFE/__tmp_6687e366.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6687e366.c:128:13: error: expected declaration or statement at end of input
